--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,6 +5,7 @@
     "pageSize": "A4",
     "landscape": false,
     "margin": "0",
-    "downscalePercent": 100
-  }
+    "downscalePercent": 70
+  },
+  "vimMode": true
 }
